# SnakeSolver

./: README.md
astar/: a.out  snake_path.c  snake_path.h
notes/: a.out  snake_path.c  structure.cpp
snake/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Snake  a.out  cmake_install.cmake
snake/C/: CMakeLists.txt  run.sh
snake/C/src/: board.c  init.c  init.h  input.h  main.c  screen.c  screen.h  snake.h
snake/src/: .gitignore  board.c  board.h  board.sublime-workspace  init.c  init.h  input.c  input.h  main.c  snake.c  snake_path.c  snake_path.h  structures.h
